# flight-computer-v1

./: Cargo.toml  LICENSE  README.md  build.rs  documentation  sensor-log.txt
.cargo/: config.toml
scripts and misc stuff used/: allandeviation.py  main.rs
src/: lib.rs  main.rs  shared.rs
src/I2C/: bmp390.rs  gps.rs  mod.rs  mpu6050.rs
src/SPI/: lis3mdl.rs  mod.rs
src/WATCHDOG/: watchdog.rs
src/logic/: mod.rs  sensor_fusion_ESKF.rs  statemachine.rs
