[package]
edition = "2024"
name = "flightcomputer"
version = "0.1.0"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]

embassy-stm32 = {  path = "C:/Users/awhru/Desktop/embassy/embassy-stm32", features = ["defmt", "stm32f446re", "unstable-pac", "memory-x", "time-driver-tim2", "exti", "chrono"] }
embassy-sync = { path = "C:/Users/awhru/Desktop/embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { path = "C:/Users/awhru/Desktop/embassy/embassy-executor", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { path = "C:/Users/awhru/Desktop/embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-futures = { path = "C:/Users/awhru/Desktop/embassy/embassy-futures" }
embassy-embedded-hal = { path = "C:/Users/awhru/Desktop/embassy/embassy-embedded-hal", features = ["defmt"] }
embedded-hal = "0.2.6"
embedded-hal-bus = { version = "0.2", features = ["async"] }
mpu6050-async = "0.1"
bmp390-rs = "0.4"
embedded-hal-async = "1.0" 

defmt = "0.3"
defmt-rtt = "0.4"
nmea0183 = "0.4"


embedded-sdmmc = "0.8"
nalgebra = { version = "0.33", default-features = false, features = ["libm"] }
matrixmultiply = { version = "0.3", default-features = false }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"

embedded-io = { version = "0.7.1" }
embedded-io-async = { version = "0.7.0" }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
futures-util = { version = "0.3.30", default-features = false }
heapless = { version = "0.9", default-features = false }
critical-section = "1.1"
nb = "1.0.0"
embedded-storage = "0.3.1"
micromath = "2.0.0"
usbd-hid = "0.10.0"
static_cell = "2"
chrono = { version = "^0.4", default-features = false}

libm = "0.2"

[profile.release]
debug = 2



[patch.crates-io]
embassy-stm32 = { path = "C:/Users/awhru/Desktop/embassy/embassy-stm32"}
embassy-sync = { path = "C:/Users/awhru/Desktop/embassy/embassy-sync"}
embassy-executor = { path = "C:/Users/awhru/Desktop/embassy/embassy-executor" }
embassy-time = { path = "C:/Users/awhru/Desktop/embassy/embassy-time"}
embassy-futures = { path = "C:/Users/awhru/Desktop/embassy/embassy-futures" }
embassy-embedded-hal = { path = "C:/Users/awhru/Desktop/embassy/embassy-embedded-hal" }
